--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "strict": true,
-      "module": "NodeNext",
-      "moduleResolution": "NodeNext",
-      "sourceMap": true,
-      "outDir": "dist",
-    },
-    "include": ["src/**/*"],
-  }
+  "compilerOptions": {
+    "target": "ES5",
+    "strict": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "sourceMap": true,
+    "outDir": "src/dist"
+  },
+  "include": ["src/**/*"]
+}
